--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "git@github.com:nko3/lisezmoi.git"
   },
   "dependencies": {
+    "socket.io": "~0.9.11"
   },
   "engines": {
     "node": "0.8.x"
