Moved to express

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "url": "git@github.com:nko3/lisezmoi.git"
   },
   "dependencies": {
-    "socket.io": "~0.9.11"
+    "socket.io": "~0.9.11",
+    "express": "~3.0.2",
+    "ejs": "~0.8.3"
   },
   "engines": {
     "node": "0.8.x"
