--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nko3-lisezmoi",
-  "version": "0.0.0-2",
+  "version": "0.0.1",
   "description": "LISEZMOI",
   "main": "server.js",
   "scripts": {
