--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "socket.io": "~0.9.11",
     "express": "~3.0.2",
     "ejs": "~0.8.3",
-    "underscore": "~1.4.2"
+    "underscore": "~1.4.2",
+    "uglify-js2": "~2.1.11"
   },
   "engines": {
     "node": "0.8.x"
